intro-certDigit | smartphone

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
     <!-- Font Awesome CSS  -->
     <link href="font-awesome-4.6.3/css/font-awesome.css" rel="stylesheet">
 
+    <!-- cssSandpaper - Text Shadow para IE8 -->
+    <script type="text/javascript" src="js/EventHelpers.js"></script>
+    <script type="text/javascript" src="js/textshadow.js"></script>
+    <script type="text/javascript" src="js/cssQuery-p.js"></script>
+    <script type="text/javascript" src="js/cssSandpaper.js"></script>
+
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
@@ -101,7 +107,27 @@
 
     <!-- Intro Section -->
     <section id="intro" class="intro-section">
-
+      <div class="intro-bg">
+        <div class="container">
+          <div class="row">
+            <div class="hidden-xs">
+              <img class="img-responsive" src="img/introCertDigit.png"></img>
+            </div>
+            <div class="col-xs-12">
+              <h2>Certificação Digital</h2>
+            </div>
+            <div class="col-xs-12">
+              <p>O Certificado Digital é uma assinatura com validade jurídica 
+              que garante proteção às transações eletrônicas e outros serviços 
+              via internet, permitindo que pessoas e empresas se identifiquem 
+              e assinem digitalmente de qualquer lugar do mundo com mais 
+              segurança e agilidade.<br/>
+              A Serasa Experian disponibiliza diferentes tipos de certificado, 
+              de acordo com as necessidades de cada cliente.</p>
+            </div>
+          </div>  
+        </div>
+      </div>
     </section>
 
 
