posicionamento e dimensões do jumbotron do e-cnpj, e-cpf e nf-e | smartphone

--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
               A Serasa Experian disponibiliza diferentes tipos de certificado, 
               de acordo com as necessidades de cada cliente.</p>
             </div>
+            <div class="col-xs-12">
+              <p class="config-CertDigit"><small>Verifique se o computador no qual você utilizará o 
+              certificado digital possui os requisitos técnicos para a correta 
+              utililzação. <a href="#"> CLIQUE AQUI.</a></small></p>
+            </div>
           </div>  
         </div>
       </div>
@@ -133,13 +138,68 @@
 
     <!-- Certificação Digital Section -->
     <section id="cert-digit" class="cert-digit-section">
-
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="jumbotron">
+             <div class="jumbotron-photo"><img src="img/ecnpj-home.jpg"></div>
+             <div class="jumbotron-contents">
+               <h1>O e-CNPJ garante a autenticidade e a integridade nas transações 
+               eletrônicas de pessoas jurídicas.</h1>
+               <p>É a versão digital do CNPJ, que permite assinar digitalmente e
+               transmitir dados de operações de Pessoa Jurídica, garantindo a 
+               integridade das informações. Está vinculado à Receita Federal e, 
+               por isso, deve ser emitido para o representante legal cadastrado 
+               neste órgão.</p>
+               <button type="button" class="btn btn-primary btn-block">SAIBA MAIS</button>
+             </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="jumbotron">
+             <div class="jumbotron-photo"><img src="img/ecpf-home.jpg"></div>
+             <div class="jumbotron-contents">
+               <h1>O e-CNPJ garante a autenticidade e a integridade nas transações 
+               eletrônicas de pessoas jurídicas.</h1>
+               <p>É a versão digital do CNPJ, que permite assinar digitalmente e
+               transmitir dados de operações de Pessoa Jurídica, garantindo a 
+               integridade das informações. Está vinculado à Receita Federal e, 
+               por isso, deve ser emitido para o representante legal cadastrado 
+               neste órgão.</p>
+               <button type="button" class="btn btn-primary btn-block">SAIBA MAIS</button>
+             </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="jumbotron">
+             <div class="jumbotron-photo"><img src="img/nfe-home.jpg"></div>
+             <div class="jumbotron-contents">
+               <h1>O e-CNPJ garante a autenticidade e a integridade nas transações 
+               eletrônicas de pessoas jurídicas.</h1>
+               <p>É a versão digital do CNPJ, que permite assinar digitalmente e
+               transmitir dados de operações de Pessoa Jurídica, garantindo a 
+               integridade das informações. Está vinculado à Receita Federal e, 
+               por isso, deve ser emitido para o representante legal cadastrado 
+               neste órgão.</p>
+               <button type="button" class="btn btn-primary btn-block">SAIBA MAIS</button>
+             </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
 
     <!-- Credit Service Section -->
     <section id="credit-service" class="credit-service-section">
-
+ 
+      <div class="container">
+        <div class="row credit-service-bg">
+          <div class="col-xs-12">
+              <h1>CREDIT SERVICE</h1>
+           </div>
+        </div>
+      </div>
     </section>
 
 
