--- a/index.html
+++ b/index.html
@@ -159,13 +159,12 @@
             <div class="jumbotron">
              <div class="jumbotron-photo"><img src="img/ecpf-home.jpg"></div>
              <div class="jumbotron-contents">
-               <h1>O e-CNPJ garante a autenticidade e a integridade nas transações 
-               eletrônicas de pessoas jurídicas.</h1>
-               <p>É a versão digital do CNPJ, que permite assinar digitalmente e
-               transmitir dados de operações de Pessoa Jurídica, garantindo a 
-               integridade das informações. Está vinculado à Receita Federal e, 
-               por isso, deve ser emitido para o representante legal cadastrado 
-               neste órgão.</p>
+               <h1>O e-CPF garante a autenticidade e a integridade nas transações 
+               eletrônicas de pessoas físicas.</h1>
+               <p>É a versão digital do CPF, que permite realizar operações de 
+               Pessoa Física com validade jurídica pela internet. Também é possível 
+               transmitir demonstrativos para a Receita Federal e efetuar outros 
+               serviços em nome de uma empresa caso você a represente.</p>
                <button type="button" class="btn btn-primary btn-block">SAIBA MAIS</button>
              </div>
             </div>
@@ -174,13 +173,13 @@
             <div class="jumbotron">
              <div class="jumbotron-photo"><img src="img/nfe-home.jpg"></div>
              <div class="jumbotron-contents">
-               <h1>O e-CNPJ garante a autenticidade e a integridade nas transações 
-               eletrônicas de pessoas jurídicas.</h1>
-               <p>É a versão digital do CNPJ, que permite assinar digitalmente e
-               transmitir dados de operações de Pessoa Jurídica, garantindo a 
-               integridade das informações. Está vinculado à Receita Federal e, 
-               por isso, deve ser emitido para o representante legal cadastrado 
-               neste órgão.</p>
+               <h1>A NF-e é um documento de existência digital, emitido e 
+               armazenado eletronicamente.</h1>
+               <p>Utilizando-a, você não precisará mais dos talões de notas fiscais e 
+               ainda terá acesso a um modelo nacional eletrônico de notas fiscais. 
+               A Nota Fiscal Eletrônica já é uma realidade na legislação brasileira 
+               desde outubro de 2005.<br/>Hoje, ela é utilizada por empresas de diversos 
+               segmentos e portes, sendo assinada com certificados digitais.</p>
                <button type="button" class="btn btn-primary btn-block">SAIBA MAIS</button>
              </div>
             </div>
@@ -192,12 +191,75 @@
 
     <!-- Credit Service Section -->
     <section id="credit-service" class="credit-service-section">
- 
       <div class="container">
         <div class="row credit-service-bg">
           <div class="col-xs-12">
-              <h1>CREDIT SERVICE</h1>
-           </div>
+            <h1>CREDIT SERVICE</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="jumbotron">
+             <div class="jumbotron-photo"><img src="img/consulta.png"></div>
+             <div class="jumbotron-contents">
+               <h1>Consulta de CPF / CNPJ</h1>
+               <h3>Acesso rápido e fácil às informações de clientes e empresas.</h3>
+               <p>Acesso ao maior banco de dados da América Latina. Consultas ao CPF 
+               ou CNPJ dos seus clientes, parceiros e fornecedores.</p>
+               <button type="button" class="btn btn-primary btn-block">SAIBA MAIS</button>
+             </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="jumbotron">
+                  <div class="jumbotron-photo"><img src="img/analise.jpg"></div>
+                  <div class="jumbotron-contents">
+                    <h4>Análise de Crédito</h4>
+                    <p>Acesse informações válidas, pelos dados cadastrais, 
+                    para atualização de cadastro e liberação de crédito aos clientes.</p>
+                    <button type="button" class="btn btn-primary btn-block">SAIBA MAIS</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xs-12">
+                <div class="jumbotron">
+                  <div class="jumbotron-photo"><img src="img/negativacao.jpg"></div>
+                  <div class="jumbotron-contents">
+                    <h4>Negativação de devedores</h4>
+                    <p>Inclua anotações de devedores na maior base de dados de 
+                    consultas utilizada no Brasil.</p>
+                    <button type="button" class="btn btn-primary btn-block">SAIBA MAIS</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="jumbotron">
+                  <div class="jumbotron-photo"><img src="img/meproteja.jpg"></div>
+                  <div class="jumbotron-contents">
+                    <h4>MeProteja CPF/CNPJ</h4>
+                    <p>Monitoramento e alertas 24 horas por dia sobre consultas, 
+                    dívidas ou riscos de fraude em seu CPF.</p>
+                    <button type="button" class="btn btn-primary btn-block">SAIBA MAIS</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xs-12">
+                <div class="jumbotron">
+                  <div class="jumbotron-photo"><img src="img/infobusca.jpg"></div>
+                  <div class="jumbotron-contents">
+                    <h4>InfoBusca</h4>
+                    <p>Relatório completo e atualizado do CNPJ da sua empresa e 
+                    até 3 sócios. Evite fraudes que atrapalham os negócios.</p>
+                    <button type="button" class="btn btn-primary btn-block">SAIBA MAIS</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
