--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="intro-bg">
         <div class="container">
           <div class="row">
-            <div class="hidden-xs">
+            <div class="hide-img">
               <img class="img-responsive" src="img/introCertDigit.png"></img>
             </div>
             <div class="col-xs-12">
@@ -276,6 +276,36 @@
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
 
+    </section>
+
+
+    <!-- Footer Section -->
+    <section id="footer" class="footer-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+              <div class="img-footer">
+              <a href="#">
+                <img class="img-responsive" src="img/logo_lg.png"></img>
+              </a>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 pull-right">
+              <p>
+                Av. Cel. Fernando Prestes, 60 - Centro,
+                Pindamonhangaba - SP, 12400-240<br/>
+                (12) 3522-7513<br/>
+                <a href="#">certificadodigitalvale@gmail.com</a><br/>
+                <a href="#">
+                  <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
+                </a>
+              </p>
+            </div>
+          </div>
+          <div class="cpright">
+            <small>Copyright © 2016 | Desenvolvido por<a href="#"> JP&MR.</a><small>
+          </div>
+        </div>
     </section>
 
 
