ajustes de resposividade : tablet e desktop | XXX TODO: ajustar o mapa e o rodapé

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <link rel="bookmark" href="favicon_16.ico"/>
 
-    <!-- Bootstrap Core CSS -->
+    <!-- Bootstrap Core CSS
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    -->
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
@@ -26,9 +26,9 @@
     <!-- Custom CSS -->
     <link href="css/custom.css" rel="stylesheet">
  
-    <!-- Font Awesome CSS  -->
+    <!-- Font Awesome CSS
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-
+    -->
     <!-- Font Awesome CSS  -->
     <link href="font-awesome-4.6.3/css/font-awesome.css" rel="stylesheet">
 
@@ -107,16 +107,19 @@
 
     <!-- Intro Section -->
     <section id="intro" class="intro-section">
-      <div class="intro-bg">
-        <div class="container">
-          <div class="row">
+      <div class="container">
+        <div class="intro-bg">
+        <div class="container-fluid">
+          <div id="intro-info" class="row">
             <div class="hide-img">
-              <img class="img-responsive" src="img/introCertDigit.png"></img>
+              <div class="col-sm-10 col-sm-offset-1 col-md-10">
+                <img class="img-responsive" src="img/introCertDigit.png"></img>
+              </div>
             </div>
-            <div class="col-xs-12">
-              <h2>Certificação Digital</h2>
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-10">
+              <h2>Certificado Digital</h2>
             </div>
-            <div class="col-xs-12">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-7">
               <p>O Certificado Digital é uma assinatura com validade jurídica 
               que garante proteção às transações eletrônicas e outros serviços 
               via internet, permitindo que pessoas e empresas se identifiquem 
@@ -125,12 +128,15 @@
               A Serasa Experian disponibiliza diferentes tipos de certificado, 
               de acordo com as necessidades de cada cliente.</p>
             </div>
-            <div class="col-xs-12">
+          </div>
+          <div class="row">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
               <p class="config-CertDigit"><small>Verifique se o computador no qual você utilizará o 
               certificado digital possui os requisitos técnicos para a correta 
               utililzação. <a href="#"> CLIQUE AQUI.</a></small></p>
             </div>
           </div>  
+        </div>
         </div>
       </div>
     </section>
@@ -140,7 +146,7 @@
     <section id="cert-digit" class="cert-digit-section">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-sm-6 col-md-4">
             <div class="jumbotron">
              <div class="jumbotron-photo"><img src="img/ecnpj-home.jpg"></div>
              <div class="jumbotron-contents">
@@ -155,7 +161,7 @@
              </div>
             </div>
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-sm-6 col-md-4">
             <div class="jumbotron">
              <div class="jumbotron-photo"><img src="img/ecpf-home.jpg"></div>
              <div class="jumbotron-contents">
@@ -169,7 +175,7 @@
              </div>
             </div>
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-sm-6 col-md-4">
             <div class="jumbotron">
              <div class="jumbotron-photo"><img src="img/nfe-home.jpg"></div>
              <div class="jumbotron-contents">
@@ -192,13 +198,13 @@
     <!-- Credit Service Section -->
     <section id="credit-service" class="credit-service-section">
       <div class="container">
-        <div class="row credit-service-bg">
-          <div class="col-xs-12">
+        <div class="row">
+          <div class="credit-service-bg">
             <h1>CREDIT SERVICE</h1>
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0">
             <div class="jumbotron">
              <div class="jumbotron-photo"><img src="img/consulta.png"></div>
              <div class="jumbotron-contents">
@@ -210,9 +216,9 @@
              </div>
             </div>
           </div>
-          <div class="col-xs-12">
+          <div id="credit-service-group" class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0">
             <div class="row">
-              <div class="col-xs-12">
+              <div class="col-xs-12 col-sm-6 col-md-6">
                 <div class="jumbotron">
                   <div class="jumbotron-photo"><img src="img/analise.jpg"></div>
                   <div class="jumbotron-contents">
@@ -223,7 +229,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xs-12">
+              <div class="col-xs-12 col-sm-6 col-md-6">
                 <div class="jumbotron">
                   <div class="jumbotron-photo"><img src="img/negativacao.jpg"></div>
                   <div class="jumbotron-contents">
@@ -236,7 +242,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-xs-12">
+              <div class="col-xs-12 col-sm-6 col-md-6">
                 <div class="jumbotron">
                   <div class="jumbotron-photo"><img src="img/meproteja.jpg"></div>
                   <div class="jumbotron-contents">
@@ -247,7 +253,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xs-12">
+              <div class="col-xs-12 col-sm-6 col-md-6">
                 <div class="jumbotron">
                   <div class="jumbotron-photo"><img src="img/infobusca.jpg"></div>
                   <div class="jumbotron-contents">
@@ -265,13 +271,13 @@
     </section>
 
 
-    <!-- Location Section -->
+    <!-- Location Section
     <section id="location" class="map">
       <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-itema" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3674.70766599034!2d-45.46323628503398!3d-22.924150985003013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ccf03b727f6c43%3A0xa149ce0ff1997cc2!2sAv.+Cel.+Fernando+Prestes%2C+60+-+Centro%2C+Pindamonhangaba+-+SP%2C+12400-240!5e0!3m2!1spt-BR!2sbr!4v1471639652380" width="800" height="500" allowfullscreen></iframe>
       </div>
     </section>
-
+    -->
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
@@ -312,12 +318,12 @@
 
     <!-- jQuery -->
     <script src="js/jquery-1.10.1.min.js"></script>
-   
+   <!--
     <script src="https://code.jquery.com/jquery-1.9.1.min.js" integrity="sha256-wS9gmOZBqsqWxgIVgA8Y9WcQOa7PgSIX+rPA0VL2rbQ=" crossorigin="anonymous"></script>
-
-    <!-- Bootstrap Core JavaScript-->
+    -->
+    <!-- Bootstrap Core JavaScript
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+    -->
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.js"></script>
 
