--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <link rel="bookmark" href="favicon_16.ico"/>
 
-    <!-- Bootstrap Core CSS
+    <!-- Bootstrap Core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    -->
+
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
@@ -26,9 +26,9 @@
     <!-- Custom CSS -->
     <link href="css/custom.css" rel="stylesheet">
  
-    <!-- Font Awesome CSS
+    <!-- Font Awesome CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-    -->
+
     <!-- Font Awesome CSS  -->
     <link href="font-awesome-4.6.3/css/font-awesome.css" rel="stylesheet">
 
@@ -316,14 +316,15 @@
 
 
 
-    <!-- jQuery -->
+    <!-- JQuery -->
     <script src="js/jquery-1.10.1.min.js"></script>
-   <!--
+
+    <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-1.9.1.min.js" integrity="sha256-wS9gmOZBqsqWxgIVgA8Y9WcQOa7PgSIX+rPA0VL2rbQ=" crossorigin="anonymous"></script>
-    -->
-    <!-- Bootstrap Core JavaScript
+
+    <!-- Bootstrap Core JavaScript -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    -->
+
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.js"></script>
 
@@ -344,4 +345,3 @@
 
   </body>
 </html>
-
