--- a/index.html
+++ b/index.html
@@ -19,18 +19,39 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
+    <!--[if lt IE 8]>
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.min.js"></script>
+    <![endif]-->
+
 
     <!-- Bootflat Core CSS -->
     <link href="css/bootflat.css" rel="stylesheet">
+    <!--[if lt IE 8]>
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.min.js"></script>
+    <![endif]-->
 
     <!-- Custom CSS -->
     <link href="css/custom.css" rel="stylesheet">
- 
+     <!--[if lt IE 8]>
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.min.js"></script>
+    <![endif]-->
+
     <!-- Font Awesome CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+    <!--[if lt IE 8]>
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.min.js"></script>
+    <![endif]-->
 
     <!-- Font Awesome CSS  -->
     <link href="font-awesome-4.6.3/css/font-awesome.css" rel="stylesheet">
+    <!--[if lt IE 8]>
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.min.js"></script>
+    <![endif]-->
 
     <!-- cssSandpaper - Text Shadow para IE8 
     <script type="text/javascript" src="js/EventHelpers.js"></script>
