--- a/index.html
+++ b/index.html
@@ -19,46 +19,25 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
-    <!--[if lt IE 8]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
-    <![endif]-->
-
 
     <!-- Bootflat Core CSS -->
     <link href="css/bootflat.css" rel="stylesheet">
-    <!--[if lt IE 8]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
-    <![endif]-->
 
     <!-- Custom CSS -->
     <link href="css/custom.css" rel="stylesheet">
-     <!--[if lt IE 8]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
-    <![endif]-->
 
     <!-- Font Awesome CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-    <!--[if lt IE 8]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
-    <![endif]-->
 
     <!-- Font Awesome CSS  -->
     <link href="font-awesome-4.6.3/css/font-awesome.css" rel="stylesheet">
-    <!--[if lt IE 8]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
-    <![endif]-->
 
-    <!-- cssSandpaper - Text Shadow para IE8 
+    <!-- cssSandpaper - Text Shadow para IE8 -->
     <script type="text/javascript" src="js/EventHelpers.js"></script>
     <script type="text/javascript" src="js/textshadow.js"></script>
     <script type="text/javascript" src="js/cssQuery-p.js"></script>
     <script type="text/javascript" src="js/cssSandpaper.js"></script>
-    -->
+
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 8]>
@@ -74,52 +53,50 @@
     <nav class="navbar navbar-default" role="navigation">
       <div class="container">
           <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
-
-                  <a class="navbar-brand" href="#">
-                    <img class="img-responsive" src="img/logo_lg.png"></img>
-                  </a>
-                  
+            <button type="button" 
+                    class="navbar-toggle collapsed" 
+                    data-toggle="collapse" 
+                    data-target=".navbar-ex1-collapse" 
+                    aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">
+              <img class="img-responsive" src="img/logo_lg.png"></img>
+            </a>      
           </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-ex1-collapse navbar-right">
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a class="" href="#"></a>
-                    </li>
-                    <li>
-                      <div class="btn-group">
-                        <button type="button" 
-                                class="btn btn-link dropdown-toggle" 
-                                data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">
-                          CERTIFICAÇÃO DIGITAL 
-                          <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu">
-                          <li><a href="#">E-CNPJ</a></li>
-                          <li><a href="#">E-CPF</a></li>
-                          <li><a href="#">NF-E</a></li>
-                        </ul>
-                      </div>
-                    </li>
-                    <li>
-                        <a class="" href="#">CREDIT SERVICE</a>
-                    </li>
-                    <li>
-                        <a class="" href="#">MAPA</a>
-                    </li>
-                    <li>
-                        <a class="" href="#">CONTATO</a>
-                    </li>
-                </ul>
-            </div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse navbar-ex1-collapse navbar-right">
+            <ul class="nav navbar-nav">
+              <li>
+                <div class="btn-group">
+                  <button type="button" 
+                          class="btn btn-link dropdown-toggle" 
+                          data-toggle="dropdown"
+                          aria-haspopup="true" aria-expanded="false">
+                    CERTIFICAÇÃO DIGITAL 
+                    <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a href="#">E-CNPJ</a></li>
+                    <li><a href="#">E-CPF</a></li>
+                    <li><a href="#">NF-E</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li>
+                  <a class="" href="#">CREDIT SERVICE</a>
+              </li>
+              <li>
+                  <a class="" href="#">MAPA</a>
+              </li>
+              <li>
+                  <a class="" href="#">CONTATO</a>
+              </li>
+            </ul>
+          </div>
         <!-- /.navbar-collapse -->
       </div>
       <!-- /.container -->
