--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <!-- Font Awesome CSS  -->
     <link href="font-awesome-4.6.3/css/font-awesome.css" rel="stylesheet">
 
-    <!-- cssSandpaper - Text Shadow para IE8 -->
+    <!-- cssSandpaper - Text Shadow para IE8 
     <script type="text/javascript" src="js/EventHelpers.js"></script>
     <script type="text/javascript" src="js/textshadow.js"></script>
     <script type="text/javascript" src="js/cssQuery-p.js"></script>
     <script type="text/javascript" src="js/cssSandpaper.js"></script>
-
+    -->
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 8]>
