--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <!-- Custom CSS -->
     <link href="css/custom.css" rel="stylesheet">
 
-    <!-- Font Awesome CSS -->
+    <!-- Font Awesome CSS 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-
+    -->
     <!-- Font Awesome CSS  -->
     <link href="font-awesome-4.6.3/css/font-awesome.css" rel="stylesheet">
 
@@ -38,6 +38,10 @@
     <script type="text/javascript" src="js/cssQuery-p.js"></script>
     <script type="text/javascript" src="js/cssSandpaper.js"></script>
     -->
+
+    <!-- JQuery -->
+    <script src="js/jquery-1.10.1.min.js"></script>
+
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
@@ -315,15 +319,12 @@
 
 
 
-    <!-- JQuery -->
-    <script src="js/jquery-1.10.1.min.js"></script>
-
-    <!-- JQuery -->
+    <!-- JQuery 
     <script src="https://code.jquery.com/jquery-1.9.1.min.js" integrity="sha256-wS9gmOZBqsqWxgIVgA8Y9WcQOa7PgSIX+rPA0VL2rbQ=" crossorigin="anonymous"></script>
-
-    <!-- Bootstrap Core JavaScript -->
+    -->
+    <!-- Bootstrap Core JavaScript 
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+    -->
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.js"></script>
 
