--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <!--[if lt IE 9]>
       <script src="lib/html5shiv/dist/html5shiv.min.js"></script>
       <script src="lib/respond/dest/respond.min.js"></script>
+      <script src="lib/css3-mediaqueries-js/css3-mediaqueries.js"></script>
     <![endif]-->
 
   </head>
@@ -319,7 +320,7 @@
             </div>
           </div>
           <div class="cpright">
-            <small>Copyright © 2016 | Desenvolvido por<a href="#"> JP&MR.</a><small>
+            <small>Copyright © 2016 | Desenvolvido por<a href="#"> JP&MR.</a></small>
           </div>
         </div>
     </section>
