--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link href="css/bootflat.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet" media="screen">
 
 
     <!-- Font Awesome CSS 
