--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                   </button>
                   <ul class="dropdown-menu" role="menu">
                     <li><a href="#">E-CNPJ</a></li>
-                    <li><a href="#">E-CPF</a></li>
-                    <li><a href="#">NF-E</a></li>
+                    <li id="borda"><a href="#">E-CPF</a></li>
+                    <li id="borda"><a href="#">NF-E</a></li>
                   </ul>
                 </div>
               </li>
@@ -122,14 +122,14 @@
         <div class="container-fluid">
           <div id="intro-info" class="row">
             <div class="hide-img">
-              <div class="col-sm-10 col-sm-offset-1 col-md-7">
+              <div class="col-sm-10 col-sm-offset-1 col-md-7 col-md-offset-0">
                 <img class="img-responsive" src="img/introCertDigit.png"></img>
               </div>
             </div>
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-7">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-7 col-md-offset-0">
               <h2>Certificado Digital</h2>
             </div>
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-7">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-7 col-md-offset-0">
               <p>O Certificado Digital é uma assinatura com validade jurídica 
               que garante proteção às transações eletrônicas e outros serviços 
               via internet, permitindo que pessoas e empresas se identifiquem 
@@ -140,7 +140,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+            <div class="col-xs-12 col-sm-12 col-sm-offset-1 col-md-12 col-md-offset-0">
               <p class="config-CertDigit"><small>Verifique se o computador no qual você utilizará o 
               certificado digital possui os requisitos técnicos para a correta 
               utililzação. <a href="#"> CLIQUE AQUI.</a></small></p>
