texto do link de requisitos; modal dos requisitos; margem lateral do mapa e rodapé

--- a/index.html
+++ b/index.html
@@ -143,13 +143,37 @@
             <div class="col-xs-12 col-sm-12 col-sm-offset-1 col-md-12 col-md-offset-0">
               <p class="config-CertDigit"><small>Verifique se o computador no qual você utilizará o 
               certificado digital possui os requisitos técnicos para a correta 
-              utililzação. <a href="#"> CLIQUE AQUI.</a></small></p>
+              utililzação. <a href="" data-toggle="modal" data-target="#modalRequisitos"> CLIQUE AQUI.</a></small></p>
             </div>
           </div>  
         </div>
         </div>
       </div>
     </section>
+
+    
+		<!-- modalRequisitos -->
+		<div class="modal fade" id="modalRequisitos" tabindex="-1" role="dialog" aria-labelledby="requisitos">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="modal-title" id="requisitos">Requisitos técnicos para utilização</h4>
+            <hr></hr>
+          </div>
+				  <div class="modal-body">
+            <ul>
+              <li>Sistema operacional: Windows XP SP3, Vista e 7</li>
+              <li> Navegador: Internet Explorer 6.0, 7.0, 8.0 e 9.0</li>
+              <li>Micro ou notebook com porta USB habilitada e acesso a internet</li>
+              <li>Verificar com o administrador de rede se o perfil de usuário permite a instalação da leitora e o uso de seu certificado digital.</li>
+            </ul>
+					</div>
+				</div>
+      </div>
+    </div>
 
 
     <!-- Certificação Digital Section -->
@@ -281,13 +305,15 @@
     </section>
 
 
-    <!-- Location Section
+    <!-- Location Section -->
     <section id="location" class="map">
-      <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-itema" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3674.70766599034!2d-45.46323628503398!3d-22.924150985003013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ccf03b727f6c43%3A0xa149ce0ff1997cc2!2sAv.+Cel.+Fernando+Prestes%2C+60+-+Centro%2C+Pindamonhangaba+-+SP%2C+12400-240!5e0!3m2!1spt-BR!2sbr!4v1471639652380" width="800" height="500" allowfullscreen></iframe>
+      <div class="container">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-itema" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3674.70766599034!2d-45.46323628503398!3d-22.924150985003013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ccf03b727f6c43%3A0xa149ce0ff1997cc2!2sAv.+Cel.+Fernando+Prestes%2C+60+-+Centro%2C+Pindamonhangaba+-+SP%2C+12400-240!5e0!3m2!1spt-BR!2sbr!4v1471639652380" width="800" height="500" allowfullscreen></iframe>
+        </div>
       </div>
     </section>
-    -->
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
@@ -297,31 +323,31 @@
 
     <!-- Footer Section -->
     <section id="footer" class="footer-section">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-              <div class="img-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+            <div class="img-footer">
               <a href="#">
                 <img class="img-responsive" src="img/logo_lg.png"></img>
               </a>
-              </div>
-            </div>
-            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 pull-right">
-              <p>
-                Av. Cel. Fernando Prestes, 60 - Centro,
-                Pindamonhangaba - SP, 12400-240<br/>
-                (12) 3522-7513<br/>
-                <a href="#">certificadodigitalvale@gmail.com</a><br/>
-                <a href="#">
-                  <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
-                </a>
-              </p>
             </div>
           </div>
-          <div class="cpright">
-            <small>Copyright © 2016 | Desenvolvido por<a href="#"> JP&MR.</a></small>
+          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 pull-right">
+            <p>
+              Av. Cel. Fernando Prestes, 60 - Centro,
+              Pindamonhangaba - SP, 12400-240<br/>
+              (12) 3522-7513<br/>
+              <a href="#">certificadodigitalvale@gmail.com</a><br/>
+              <a href="#">
+                <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
+              </a>
+            </p>
           </div>
         </div>
+        <div class="cpright">
+          <small>Copyright © 2016 | Desenvolvido por<a href="#"> JP&MR.</a></small>
+        </div>
+      </div>
     </section>
 
 
