tabela : 3 primeiras linhas | smartphone

--- a/e-cnpj.html
+++ b/e-cnpj.html
@@ -127,58 +127,164 @@
     <!-- Table Section -->
     <section id="e-cnpj" class="table-section">
       <div class="container">
-        <div class="row">
-          <div class="col-xs-12">
-            <img class="img-responsive" src="img/ecnpj-a3-cartao.jpg"></img>
+        <div class="row first-row">
+          <div class="square img-product">
+            <div class="content">
+              <div class="table">
+                 <div class="table-cell">
+                    <img class="img-responsive" src="img/ecnpj-a3-cartao.jpg"></img>
+                  </div>
+                </div>
+              </div>
           </div>
-          <div class="col-xs-12">
-            <h3>e-CNPJ</h3>
-            <h3>A3 | Cartão</h3>
+          <div class="square title-product">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell">
+                  <div class="name-product">
+                    <h3>e-CNPJ</h3>
+                    <h3>A3 | Cartão</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-xs-12">
-            <h5>Validade: 12 meses</h5>
-            <h4>R$ 270,00</h4>
+          <div class="square price meses12">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell text-center">               
+                  <h5>Validade: 12 meses</h5>
+                    <h4>R$ 270,00</h4>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-xs-12">
-             <h5>Validade: 24 meses</h5>
-            <h4>R$ 325,00</h4>
-         </div>
-          <div class="col-xs-12">
-             <h5>Validade: 36 meses</h5>
-            <h4>R$ 340,00</h4>
-         </div>
+          <div class="square price meses24">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell text-center">               
+                  <h5>Validade: 24 meses</h5>
+                  <h4>R$ 325,00</h4>       
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square price meses36">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell text-center">               
+                  <h5>Validade: 36 meses</h5>
+                  <h4>R$ 340,00</h4>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="row">
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
+          <div class="square img-product">
+            <div class="content">
+              <div class="table">
+                 <div class="table-cell">
+                    <img class="img-responsive" src="img/ecnpj-a3-cartao-leitor.png"></img>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="square title-product">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell">
+                  <div class="name-product">
+                    <h3>e-CNPJ</h3>
+                    <h3>A3 | Cartão + Leitora</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square price meses12">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell text-center">               
+                  <h5>Validade: 12 meses</h5>
+                    <h4>R$ 270,00</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square price meses24">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell text-center">               
+                  <h5>Validade: 24 meses</h5>
+                  <h4>R$ 325,00</h4>       
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square price meses36">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell text-center">               
+                  <h5>Validade: 36 meses</h5>
+                  <h4>R$ 340,00</h4>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="row">
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
-          <div class="col-xs-12"></div>
+          <div class="square img-product">
+            <div class="content">
+              <div class="table">
+                 <div class="table-cell">
+                    <img class="img-responsive" src="img/ecnpj-a3-token.png"></img>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="square title-product">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell">
+                  <div class="name-product">
+                    <h3>e-CNPJ</h3>
+                    <h3>A3 | Token</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square price meses12">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell text-center">               
+                  <h5>Validade: 12 meses</h5>
+                    <h4>R$ 270,00</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square price meses24">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell text-center">               
+                  <h5>Validade: 24 meses</h5>
+                  <h4>R$ 325,00</h4>       
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square price meses36">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell text-center">               
+                  <h5>Validade: 36 meses</h5>
+                  <h4>R$ 340,00</h4>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
