estrutura da tabela e acordeon

--- a/e-cnpj.html
+++ b/e-cnpj.html
@@ -119,7 +119,7 @@
       <div class="container">
         <div class="ecnpj-banner">
           <div class="container-fluid">
-            <img class="img-responsive" src="img/logo-serasa.png"></img>
+            <img class="img-responsive pull-right" src="img/logo-serasa.png"></img>
         </div>
       </div>
     </section>
@@ -131,11 +131,11 @@
           <div class="square img-product">
             <div class="content">
               <div class="table">
-                 <div class="table-cell">
-                    <img class="img-responsive" src="img/ecnpj-a3-cartao.jpg"></img>
-                  </div>
+                <div class="table-cell">
+                  <img class="img-responsive" src="img/ecnpj-a3-cartao.jpg"></img>
                 </div>
               </div>
+            </div>
           </div>
           <div class="square title-product">
             <div class="content">
@@ -286,6 +286,64 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="square no-image title-product">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell">
+                  <div class="name-product text-center">
+                    <h3>e-CNPJ</h3>
+                    <h3>A3 | Mídia do cliente</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square price meses12">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell text-center">               
+                  <h5>Validade: 12 meses</h5>
+                    <h4>R$ 270,00</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square price meses24">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell text-center">               
+                  <h5>Validade: 24 meses</h5>
+                  <h4>R$ 325,00</h4>       
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="square no-image last title-product">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell">
+                  <div class="name-product text-center">
+                    <h3>e-CNPJ</h3>
+                    <h3>A1</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square price last meses12">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell text-center">               
+                  <h5>Validade: 12 meses</h5>
+                    <h4>R$ 270,00</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -294,6 +352,53 @@
     <section id="e-cnpj" class="accordion-section">
       <div class="container">
         <div class="row">
+          <h4>Loren ipsum dolor sit amet, consectetur adispiscing elit, praesent malesuada mauris</h4>
+        </div>
+        <div class="row">
+          <div class="panel-group panel-group-lists" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel">
+              <div class="panel-heading" role="tab" id="headingOne">
+                <h5 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Acessar o E-CAC
+                  </a>
+                </h5>
+              </div>
+              <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                </div>
+              </div>
+            </div>
+            <div class="panel">
+              <div class="panel-heading" role="tab" id="headingTwo">
+                <h5 class="panel-title">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Assinar a escrituração contábil e fiscal
+                  </a>
+                </h5>
+              </div>
+              <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                <div class="panel-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                </div>
+              </div>
+            </div>
+            <div class="panel">
+              <div class="panel-heading" role="tab" id="headingThree">
+                <h5 class="panel-title">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    SPED
+                  </a>
+                </h5>
+              </div>
+              <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                <div class="panel-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
